Completions for libraries added.